--- a/Firmware/platformio.ini
+++ b/Firmware/platformio.ini
@@ -14,6 +14,5 @@ lib_dir = libraries
 data_dir = Grbl_Esp32/data
 default_envs = mks_dlc32_v2_1 
 
-extra_configs =
-	ini/mks_dlc32.ini
+extra_configs = ini/mks_dlc32.ini
 
